# west-coast-drum-synth

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: build-distributables.yml
build_release/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build_release/VST3/Release/WestCoastDrumSynth.vst3/Contents/Resources/: WestCoastEditor.uidesc  moduleinfo.json
docs/: GUI_DESCRIPTION.md  GUI_TESTING_INVESTIGATION.md
resource/: WestCoastEditor.uidesc  wcdrumsynth.uidesc
scripts/: generate_knob_bitmap.py  generate_uidesc.py  open_editorhost.sh
source/: ParameterIds.h  WestCoastController.cpp  WestCoastController.h  WestCoastProcessor.cpp  WestCoastProcessor.h  controller.cpp  controller.h  entry.cpp  factory.cpp  presets.h  processor.cpp  processor.h  version.h  wcids.h  wcparams.h  westcoastdrumcids.h
source/dsp/: DrumVoice.cpp  DrumVoice.h  EnvelopeGenerator.cpp  EnvelopeGenerator.h  FMOperator.cpp  FMOperator.h  LowPassGate.cpp  LowPassGate.h  NoiseGenerator.cpp  NoiseGenerator.h  WaveFolder.cpp  WaveFolder.h
source/engine/: DrumVoice.cpp  DrumVoice.h  StepSequencer.cpp  StepSequencer.h
source/presets/: FactoryPresets.cpp  FactoryPresets.h
source/sequencer/: StepSequencer.cpp  StepSequencer.h
source/ui/: ArturiaSlider.cpp  ArturiaSlider.h  WCDrumView.cpp  WCDrumView.h
